Text Wrap Fix
Fixes text not wrapping when exceeding its limit on the New panel.

--- a/public/css/NewAdminCSS.css
+++ b/public/css/NewAdminCSS.css
@@ -36,7 +36,7 @@ h6 {
   background-color: #111;
   color: #fff;
 }
-.AdminPanel {
+.NewPanel.AdminPanel {
   height: 100%;
 }
 #MasterContainer.NewPanel .iphone-sidebar, #MasterContainer.NewPanel .iphone-content, #MasterContainer #AdminWrapper, #MasterContainer #BodyWrapper {
@@ -135,19 +135,19 @@ h6 {
 .NewPanel.AdminPanel .Reminder {
   color: #ff7300
 }
-.text-error {
+.NewPanel .text-error {
   display: block;
   text-align: center;
   color: #d6241a;
   font-weight: 200;
   padding: 5px;
 }
-.text-header {
+.NewPanel .text-header {
   display: block;
   text-align: center;
   padding: 5px 0;
 }
-.text-secondary {
+.NewPanel .text-secondary {
   color: #bbb;
   display: inline-block;
   text-align: left;
@@ -187,7 +187,7 @@ h6 {
 .NewPanel.AdminPanel #SearchInput:focus, .AdminPanel #SearchInput:active {
   border-color: #0099ff;
 }
-#SearchInput, .btn-neutral {
+.NewPanel #SearchInput, .NewPanel .btn-neutral {
   margin: 0 5px;
 }
 .NewPanel.AdminPanel #SearchInput:focus-visible {
@@ -314,6 +314,9 @@ h6 {
   -moz-user-select: text;
   -ms-user-select: text;
   user-select: text;
+}
+.NewPanel .UserDetails .Row {
+  overflow-wrap: anywhere;
 }
 .NewPanel .AuthenticatedUserName:hover, .NewPanel .Backbtn:hover, .NewPanel .Backbtn:hover + .BackArrow {
   color: #2fcfff;
